aks-staging/argocd/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    alb.networking.azure.io/alb-namespace: alb-system
    alb.networking.azure.io/alb-name: alb-test
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: http-listener
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  # - name: https-listener
  #   port: 443
  #   protocol: HTTPS
  #   allowedRoutes:
  #     namespaces:
  #       from: Selector
  #       selector:
  #         matchLabels:
  #           sensei-gateway-access: "true"
  #   tls:
  #     mode: Terminate
  #     certificateRefs:
  #     - kind : Secret
  #       group: ""
  #       name: tls-secret
