aks-staging/argocd/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route
  namespace: argocd
spec:
  parentRefs:
  - name: sensei-gateway
    namespace: director
  # hostnames:
  # - "argocd.phamid.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /argocd
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /        
    backendRefs:
    - name: argocd-server
      port: 443
